# sketchresponse

./: .gitignore  Dockerfile  README.md  book.json  edxzip.py  package-lock.json  package.json  proto2prod.py  pyproject.toml  pyrightconfig.strict.json  server.py
.changeset/: README.md  config.json  funny-tips-kneel.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: README.md  SUMMARY.md  complex_grader.md  deployment.md  edx_quickstart.md  getting_started.md  gradeable_data_format.md  groups_grader.md  howto_build_docs.md  linesegment_grader.md  local_test.md  offline_docs.md  physics_grader.md  polar_grader.md  probconfig_plugins.md  simple_grader.md  sketch_tool_dev_usage.md  sketch_tool_usage.md  template.md  using_sr.md
docs/api/: README.md  graderlib_asymptote_module.md  graderlib_gradeablefunction_module.md  graderlib_point_module.md
docs/apidocs/: conf.py  grader_lib.rst
grader_scripts/: complex_grader.py  default_grader.py  grader_template.py  group_grader.py  linesegment_grader.py  physics_grader.py  polar_grader.py  simona1.py  simona2.py  simona3.py  simple_grader.py
sketch_tool/: CHANGELOG.md  README.md  debugConfigs.js  eslint.config.js  index.html  package-lock.json  package.json  webpack.common.js  webpack.development.js  webpack.production.js
sketch_tool/lib/: config-validator.js  drag-manager.js  element-manager.js  gradeable-manager.js  history-manager.js  main.js  notification-manager.js  pointer-down-cache.js  selection-manager.js  state-manager.js  toolbar.js
sketch_tool/lib/plugins/: axes.js  background.js  base-plugin.js  freeform.js  group.js  horizontal-line.js  image.js  line-segment.js  point.js  polyline.js  spline.js  stamp.js  vertical-line.js
sketch_tool/lib/plugins/freeform/: fitcurve.js
sketch_tool/lib/util/: dom-style-helpers.js  inheriting-object-tree.js  ms-polyfills.js  workarounds.js  zdom.js
sketch_tool/styles/: main.scss
sketchresponse/: __init__.py  sketchresponse.py  types.py  utils.py
sketchresponse/grader_lib/: Asymptote.py  Axis.py  CurveFunction.py  Debugger.py  Function.py  Gradeable.py  GradeableFunction.py  LICENSE  LineSegment.py  MultiFunction.py  MultipleSplinesFunction.py  Point.py  PolarTransform.py  PolyLine.py  Polygon.py  SplineFunction.py  Tag.py  __init__.py  fit_curve.py
static/: jschannel.js
templates/: dirtree.html  index_aws.html  index_sketch_tool.html
test_grader_lib/: GradeableCollection.py  TestData.py  TestDataPolar.py  csv_to_data_new.py  polar_threelobe_false.txt  testAsymptoteMethods.py  testFunctionMethods.py  testGradeableFunctionMatching.py  testGradeableFunctionMethods.py  testGraderDecorator.py  testLineSegmentMethods.py  testMultiFunctionMethods.py  testMultipleSplinesFunctionMethods.py  testPolarTransform.py  testPolyLineMethods.py  testPolygonMethods.py  testSplineFunctionMethods.py  testTagMethods.py  testUtils.py
