[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sketchresponse"
dynamic = ["version"]
description = "A tool for drawing and evaluating mathematical functions"
readme = "README.md"
license = "LGPL-2.1-or-later"
requires-python = ">=3.10"
authors = [{ name = "Massachusetts Institute of Technology" }]
keywords = ["education", "grading", "mathematics", "edx", "prairielearn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.20.0",
    "sympy>=1.9",
    "future>=0.18.0",
]

[project.optional-dependencies]
server = ["flask>=2.0.0"]
dev = ["ruff>=0.8.0", "pandas>=1.0.0", "matplotlib>=3.0.0", "pytest>=7.0.0"]

[project.urls]
Repository = "https://github.com/PrairieLearn/sketchresponse"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sketchresponse/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["sketchresponse"]

[tool.hatch.build.targets.sdist]
include = [
    "sketchresponse/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line-too-long
]

[tool.pytest.ini_options]
testpaths = ["test_grader_lib"]
python_files = ["test*.py"]
